--- a/machine-learning-terapan/Sistem-Rekomendasi/FinalSubmissionMLTerapan.ipynb
+++ b/machine-learning-terapan/Sistem-Rekomendasi/FinalSubmissionMLTerapan.ipynb
@@ -22,7 +22,7 @@
         "id": "kugMQo1I8kZ2"
       },
       "source": [
-        "# **Content Based Filtering - Movie Recomendations**\n",
+        "# **Collaborative Filtering - Movie Recomendations**\n",
         "\n",
         "---\n",
         "\n",
