--- a/belajar-machine-learning-untuk-pemula/rock-paper-scissors/SubmissionDicodingBelajarMachineLearningUntukPemula.ipynb
+++ b/belajar-machine-learning-untuk-pemula/rock-paper-scissors/SubmissionDicodingBelajarMachineLearningUntukPemula.ipynb
@@ -302,7 +302,8 @@
         "      steps_per_epoch=25,  # berapa batch yang akan dieksekusi pada setiap epoch\n",
         "      epochs=25, # tambahkan eposchs jika akurasi model belum optimal\n",
         "      validation_data=validation_generator, # menampilkan akurasi pengujian data validasi\n",
-        "      validation_steps=5,  # berapa batch yang akan dieksekusi pada setiap epoch\n",
+        "      validation_steps=5,# berapa batch yang akan dieksekusi pada setiap epoch\n",
+        "      callbacks=[callback],
         "      verbose=2)"
       ],
       "execution_count": 11,
