--- a/belajar-machine-learning-untuk-pemula/rock-paper-scissors/SubmissionDicodingBelajarMachineLearningUntukPemula.ipynb
+++ b/belajar-machine-learning-untuk-pemula/rock-paper-scissors/SubmissionDicodingBelajarMachineLearningUntukPemula.ipynb
@@ -21,9 +21,7 @@
         "id": "VhDRcAxgJWk6"
       },
       "source": [
-        "# Perkenalkan saya Sulaiman, asal dari Palembang. \n",
-        "Berikut detail profile saya di Dicoding: \n",
-        "https://www.dicoding.com/users/sulaiman_17"
+        "# Image Classification"
       ]
     },
     {
